// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggestion should be unique per visit 1`] = `
Array [
  Object {
    "count": 1,
    "suggestion": "q1",
    "weight": 70.71,
  },
  Object {
    "count": 1,
    "suggestion": "q2",
    "weight": 70.71,
  },
]
`;

exports[`Suggestion should be weighted properly 1`] = `
Array [
  Object {
    "count": 3,
    "suggestion": "q1",
    "weight": 70.71,
  },
  Object {
    "count": 3,
    "suggestion": "q2",
    "weight": 70.71,
  },
]
`;

exports[`Suggestion should be weighted properly 2`] = `
Array [
  Object {
    "count": 2,
    "suggestion": "q1",
    "weight": 81.65,
  },
  Object {
    "count": 1,
    "suggestion": "q2",
    "weight": 57.74,
  },
]
`;
